--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,6 @@ oauth:
     redirect-uri: http://localhost:8080/api/v1/oauth/kakao/callback
 
   github:
-    client-id: Ov23liZzATwic5ScP2Gy
-    client-secret: b66af9b360eabde18a918b006892aed9cf2d830e
+    client-id: client-id
+    client-secret: client-secret
     redirect-uri: http://localhost:8080/api/v1/oauth/github/callback
